--- a/src/template.html
+++ b/src/template.html
@@ -2,15 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="bundle.js"></script></head>
+      <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script defer src="bundle.js"></script>
+  </head>
   <body>
-    <h1> Cupp-MVP-48hr</h1>
-    <div class="container">
-      <img id="zeldaImg" />
-      <h3>I need...</h3>
-      <div id="need" class="btn">I need...</div>
-
-    </div>
+    <div id="app"></div>
   </body>
 </html>
